Add missing ping sound

--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ ext{
     jabelVersion = "93fde537c7"
     //windows sucks
     isWindows = System.getProperty("os.name").toLowerCase().contains("windows")
-    sdkRoot = System.getenv("ANDROID_HOME") ?: System.getenv("ANDROID_SDK_ROOT")
+    sdkRoot = "C:\\Users\\cloud\\cmdline-tools\\sdk"
 }
 
 //java 8 backwards compatibility flag
@@ -60,7 +60,7 @@ task jarAndroid{
         //collect dependencies needed for desugaring
         def dependencies = (configurations.compileClasspath.asList() + configurations.runtimeClasspath.asList() + [new File(platformRoot, "android.jar")]).collect{ "--classpath $it.path" }.join(" ")
 
-        def d8 = isWindows ? "d8.bat" : "d8"
+        def d8 = "C:\\Users\\cloud\\cmdline-tools\\sdk\\build-tools\\34.0.0\\d8.bat"
 
         //dex and desugar files - this requires d8 in your PATH
         "$d8 $dependencies --min-api 14 --output ${project.archivesBaseName}Android.jar ${project.archivesBaseName}Desktop.jar"
